--- a/Pop_Segmentation.ipynb
+++ b/Pop_Segmentation.ipynb
@@ -10,17 +10,16 @@
    "source": [
     "# Population Segmentation with SageMaker\n",
     "\n",
-    "In this notebook, you'll employ two, unsupervised learning algorithms to do **population segmentation**. Population segmentation aims to find natural groupings in population data that reveal some feature-level similarities between different regions in the US.\n",
+    "In this notebook, we'll employ two, unsupervised learning algorithms to do **population segmentation**. Population segmentation aims to find natural groupings in population data that reveal some feature-level similarities between different regions in the US.\n",
     "\n",
-    "Using **principal component analysis** (PCA) you will reduce the dimensionality of the original census data. Then, you'll use **k-means clustering** to assign each US county to a particular cluster based on where a county lies in component space. How each cluster is arranged in component space can tell you which US counties are most similar and what demographic traits define that similarity; this information is most often used to inform targeted, marketing campaigns that want to appeal to a specific group of people. This cluster information is also useful for learning more about a population by revealing patterns between regions that you otherwise may not have noticed.\n",
+    "Using **principal component analysis** (PCA) you will reduce the dimensionality of the original census data. Then, we'll use **k-means clustering** to assign each US county to a particular cluster based on where a county lies in component space. How each cluster is arranged in component space can tell us which US counties are most similar and what demographic traits define that similarity; this information is most often used to inform targeted, marketing campaigns that want to appeal to a specific group of people. This cluster information is also useful for learning more about a population by revealing patterns between regions that you otherwise may not have noticed.\n",
     "\n",
     "### US Census Data\n",
     "\n",
-    "You'll be using data collected by the [US Census](https://en.wikipedia.org/wiki/United_States_Census), which aims to count the US population, recording demographic traits about labor, age, population, and so on, for each county in the US. The bulk of this notebook was taken from an existing SageMaker example notebook and [blog post](https://aws.amazon.com/blogs/machine-learning/analyze-us-census-data-for-population-segmentation-using-amazon-sagemaker/), and I've broken it down further into demonstrations and exercises for you to complete.\n",
-    "\n",
+    "We'll be using data collected by the [US Census](https://en.wikipedia.org/wiki/United_States_Census), which aims to count the US population, recording demographic traits about labor, age, population, and so on, for each county in the US. \n",
     "### Machine Learning Workflow\n",
     "\n",
-    "To implement population segmentation, you'll go through a number of steps:\n",
+    "To implement population segmentation, we'll go through a number of steps:\n",
     "* Data loading and exploration\n",
     "* Data cleaning and pre-processing \n",
     "* Dimensionality reduction with PCA\n",
@@ -28,7 +27,7 @@
     "* Clustering transformed data with k-means\n",
     "* Extracting trained model attributes and visualizing k clusters\n",
     "\n",
-    "These tasks make up a complete, machine learning workflow from data loading and cleaning to model deployment. Each exercise is designed to give you practice with part of the machine learning workflow, and to demonstrate how to use SageMaker tools, such as built-in data management with S3 and built-in algorithms.\n",
+    "These tasks make up a complete, machine learning workflow from data loading and cleaning to model deployment.\n",
     "\n",
     "---"
    ]
@@ -91,7 +90,7 @@
    "source": [
     "# boto3 client to get S3 data\n",
     "s3_client = boto3.client('s3')\n",
-    "bucket_name='aws-ml-blog-sagemaker-census-segmentation'"
+    "bucket_name='aws-sagemaker-census-segmentation'"
    ]
   },
   {
@@ -449,11 +448,11 @@
    "source": [
     "## Exploratory Data Analysis (EDA)\n",
     "\n",
-    "Now that you've loaded in the data, it is time to clean it up, explore it, and pre-process it. Data exploration is one of the most important parts of the machine learning workflow because it allows you to notice any initial patterns in data distribution and features that may inform how you proceed with modeling and clustering the data.\n",
+    "Now that we've loaded in the data, it is time to clean it up, explore it, and pre-process it. Data exploration is one of the most important parts of the machine learning workflow because it allows you to notice any initial patterns in data distribution and features that may inform how you proceed with modeling and clustering the data.\n",
     "\n",
-    "### EXERCISE: Explore data & drop any incomplete rows of data\n",
+    "### Explore data & drop any incomplete rows of data\n",
     "\n",
-    "When you first explore the data, it is good to know what you are working with. How many data points and features are you starting with, and what kind of information can you get at a first glance? In this notebook, you're required to use complete data points to train a model. So, your first exercise will be to investigate the shape of this data and implement a simple, data cleaning step: dropping any incomplete rows of data.\n",
+    "When you first explore the data, it is good to know what you are working with. How many data points and features are you starting with, and what kind of information can you get at a first glance? In this notebook, we will use complete data points to train a model. So, our first exercise will be to investigate the shape of this data and implement a simple, data cleaning step: dropping any incomplete rows of data.\n",
     "\n",
     "You should be able to answer the **question**: How many data points and features are in the original, provided dataset? (And how many points are left after dropping any incomplete rows?)"
    ]
@@ -490,7 +489,7 @@
     }
    },
    "source": [
-    "### EXERCISE: Create a new DataFrame, indexed by 'State-County'\n",
+    "### Create a new DataFrame, indexed by 'State-County'\n",
     "\n",
     "Eventually, you'll want to feed these features into a machine learning model. Machine learning models need numerical data to learn from and not categorical data like strings (State, County). So, you'll reformat this data such that it is indexed by region and you'll also drop any features that are not useful for clustering.\n",
     "\n",
@@ -1032,7 +1031,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE: Normalize the data\n",
+    "### Normalize the data\n",
     "\n",
     "You need to standardize the scale of the numerical columns in order to consistently compare the values of different features. You can use a [MinMaxScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html) to transform the numerical values so that they all fall between 0 and 1."
    ]
@@ -2052,7 +2051,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE: Calculate the explained variance\n",
+    "### Calculate the explained variance\n",
     "\n",
     "In creating new training data, you'll want to choose the top n principal components that account for at least 80% data variance. \n",
     "\n",
@@ -2344,7 +2343,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE: Create a transformed DataFrame\n",
+    "### Create a transformed DataFrame\n",
     "\n",
     "For each of our data points, get the top n component values from the list of component data points, returned by our predictor above, and put those into a new DataFrame.\n",
     "\n",
@@ -2578,7 +2577,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE: Define a k-means model\n",
+    "### Define a k-means model\n",
     "\n",
     "Your task will be to instantiate a k-means model. A `KMeans` estimator requires a number of parameters to be instantiated, which allow us to specify the type of training instance to use, and the model hyperparameters. \n",
     "\n",
@@ -2622,7 +2621,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE: Create formatted, k-means training data\n",
+    "###  Create formatted, k-means training data\n",
     "\n",
     "Just as before, you should convert the `counties_transformed` df into a numpy array and then into a RecordSet. This is the required format for passing training data into a `KMeans` model."
    ]
@@ -2642,7 +2641,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE: Train the k-means model\n",
+    "### Train the k-means model\n",
     "\n",
     "Pass in the formatted training data and train the k-means model."
    ]
@@ -2750,7 +2749,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE: Deploy the k-means model\n",
+    "### Deploy the k-means model\n",
     "\n",
     "Deploy the trained model to create a `kmeans_predictor`.\n"
    ]
@@ -2786,7 +2785,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE: Pass in the training data and assign predicted cluster labels\n",
+    "### Pass in the training data and assign predicted cluster labels\n",
     "\n",
     "After deploying the model, you can pass in the k-means training data, as a numpy array, and get resultant, predicted cluster labels for each data point."
    ]
@@ -2948,7 +2947,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### EXERCISE: Access the k-means model attributes\n",
+    "###  Access the k-means model attributes\n",
     "\n",
     "Extract the k-means model attributes from where they are saved as a TAR file in an S3 bucket.\n",
     "\n",
@@ -3768,13 +3767,20 @@
     "\n",
     "Using these techniques, you have been able to better understand the essential characteristics of different counties in the US and segment them into similar groups, accordingly."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "conda_mxnet_p36",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda_mxnet_p36"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3786,7 +3792,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.5"
   },
   "nbpresent": {
    "slides": {
